added swager docs for auth METHDS
